refixed the prop issue and rerendered the results by making all the seperate components a single component but its all up to alignment now

--- a/src/components/ImageMain/imagemain.scss
+++ b/src/components/ImageMain/imagemain.scss
@@ -1,6 +1,7 @@
 .img_container-1{
     margin-right: 1rem;
+    margin-bottom: 0.5rem;
     width: 11rem;
-    height: 16.3rem;
+    height: 16.45rem;
     border: 1px solid black;
 }
