--- a/src/pages/Shows/tvshows.scss
+++ b/src/pages/Shows/tvshows.scss
@@ -1,6 +1,5 @@
 .mainz__container{
     max-width: 100%;
-    display: flex;
     padding: 3rem 2rem 4rem;
     h2{
         margin: 0; 
@@ -18,14 +17,23 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: center;
 }
 .categories{
-    display: grid;
-    grid-template-columns: 1fr 4fr;
+    display: flex;
+    .series__no{
+        width: 100%;
+        margin: 0 .8rem;
+        flex-grow: 1;
+    }
+    .series__info{
+        // width: 100%;
+        margin: 0 1rem;
+        // justify-content: center;
+        flex-grow: 2;
+    }
 }
 .card-container{
     display: flex;
     align-content: space-between;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
 }
